# teamoon

./: .bmad  .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  ARCHITECT.md  CHANGELOG.md  CLAUDE.local.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  VERSIONING.md  com.teamoon.plist  go.mod  go.sum  install.sh  pyproject.toml  requirements.dev.txt  teamoon.service
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  go.yml  release-controller.yml  version-controller.yml
backend/: pyproject.toml
cmd/install-hooks/: main.go
cmd/install-skills/: main.go
cmd/teamoon/: main.go
docker/: Dockerfile.rocky8  Dockerfile.rocky9
e2e/: test_autopilot_flows.py
frontend/: package.json
internal/backend/: backend.go  claude.go  claude_test.go  noop.go  opencode.go  opencode_test.go  registry.go  registry_test.go
internal/chat/: chat.go
internal/config/: config.go  config_backend_test.go  config_test.go
internal/dashboard/: model.go  styles.go  update.go  view.go
internal/engine/: engine.go  engine_lifecycle_test.go  executor.go  executor_test.go  guardrails.go  project_loop.go  project_loop_test.go  wordgen.go
internal/jobs/: cron.go  harvester.go  runner.go  scheduler.go  store.go
internal/logs/: logs.go
internal/metrics/: cost.go  tokens.go  usage.go
internal/onboarding/: bmad.go  configsetup.go  distro.go  envsetup.go  hooks.go  mcp.go  onboarding.go  onboarding_test.go  plugins.go  prereqs.go  prompt.go  status.go  symlinks.go
internal/pathutil/: pathutil.go
internal/plan/: plan.go  (+1 more)
(+73 files in other folders)
