[tool.poetry]
name = "teamoon"
version = "1.0.39"
description = "Open-source Clawdbot alternative — TUI + Web dashboard and autopilot engine for Claude Code with token tracking, usage metrics, task queue, project monitoring, and automated task execution"
authors = ["B <g46327wsj1.marbling129@passinbox.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^78.1.0"
idna = "^3.0"
certifi = "^2025.1.31"
bump2version = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pylint = "^3.3.0"
yamllint = "^1.35.0"
isort = "^6.0.1"
toml = "^0.10.0"
black = "^25.1.0"
pytest = "^8.3.1"
httpx = { version = ">=0.24.0", optional = true }
pytest-cov = { version = "^6.1.1", optional = true }
coverage = "^7.2.5"

[tool.poetry.extras]
migrations = ["alembic"]
testing = ["pytest", "httpx"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=app --cov-report=xml:coverage.xml --cov-report=term"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
rcfile = ".pylintrc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
